# yaaababyy

./: .gitignore  MC.py  README.md  anticeren.txt  automod.py  commands.py  delete.py  events.py  logs.py  main.py  minecraft.py  mod.py  music.py  owner.py  page.py  paladins.py  pokemon.py  pyproject.toml  requirements.txt  smite.py  smite.txt  smite2.json  smite3.json  social.py  special.py  test.py  tiers.json  voice.py  weather.py  ytdl.py
