[tool.poetry]
name = "repl_python3_yaaababyy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.0"
instaloader = "^4.8.2"
bokeh = "^2.4.2"
numpy = "^1.22.2"
wikipedia = "^1.4.0"
loremipsum = "^1.0.5"
ujson = "^5.1.0"
youtube_dl = "^2021.12.17"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
